5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4152/executions/1593_1805.log
== TEST (2019-03-28 10:34:44) 
-- CODE:
corA1 = int(input("Digite aqui a primeira coordenada do ponto A: "))

corA2 = int(input("Digite aqui a segunda coordenada do ponto A:"))

corB1 = int(input("Digite aqui a prinmeira coordenada do ponto B: "))

corB2 = int(input("Digite aqui a segunda coordenada do ponto B: "))

xm = (corB1 + corA1) // 2

ym = (corB2 + corA2) // 2

print(xm)

print(ym)
-- OUTPUT:
40
36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:35:30) 
-- CODE:
corA1 = float(input("Digite aqui a primeira coordenada do ponto A: "))

corA2 = float(input("Digite aqui a segunda coordenada do ponto A:"))

corB1 = float(input("Digite aqui a prinmeira coordenada do ponto B: "))

corB2 = float(input("Digite aqui a segunda coordenada do ponto B: "))

xm = (corB1 + corA1) / 2

ym = (corB2 + corA2) / 2

print(xm)

print(ym)
-- OUTPUT:
40.0
36.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:35:47) 
-- CODE:
corA1 = float(input("Digite aqui a primeira coordenada do ponto A: "))

corA2 = float(input("Digite aqui a segunda coordenada do ponto A:"))

corB1 = float(input("Digite aqui a prinmeira coordenada do ponto B: "))

corB2 = float(input("Digite aqui a segunda coordenada do ponto B: "))

xm = (corB1 + corA1) / 2

ym = (corB2 + corA2) / 2

print(xm)

print(ym)
-- EXECUTION TIME:
0.156371
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
40.0
36.5
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
3.75
2.4
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
2.33
3.44
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:36:03) 
-- CODE:
corA1 = float(input("Digite aqui a primeira coordenada do ponto A: "))

corA2 = float(input("Digite aqui a segunda coordenada do ponto A:"))

corB1 = float(input("Digite aqui a prinmeira coordenada do ponto B: "))

corB2 = float(input("Digite aqui a segunda coordenada do ponto B: "))

xm = (corB1 + corA1) / 2

ym = (corB2 + corA2) / 2

print(xm)

print(ym)
-- OUTPUT:
40.0
36.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:37:23) 
-- CODE:
corA1 = float(input("Digite aqui a primeira coordenada do ponto A: "))

corA2 = float(input("Digite aqui a segunda coordenada do ponto A: "))

corB1 = float(input("Digite aqui a primeira coordenada do ponto B: "))

corB2 = float(input("Digite aqui a segunda coordenada do ponto B: "))

xm = (corB1 + corA1) / 2

ym = (corB2 + corA2) / 2

print(round(xm, 1)

print(round(ym, 1)
-- ERROR:
File "XXXX", line 15
    print(round(ym, 1)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:37:35) 
-- CODE:
corA1 = float(input("Digite aqui a primeira coordenada do ponto A: "))

corA2 = float(input("Digite aqui a segunda coordenada do ponto A: "))

corB1 = float(input("Digite aqui a primeira coordenada do ponto B: "))

corB2 = float(input("Digite aqui a segunda coordenada do ponto B: "))

xm = (corB1 + corA1) / 2

ym = (corB2 + corA2) / 2

print(round(xm, 1))

print(round(ym, 1))
-- OUTPUT:
40.0
36.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:37:53) 
-- CODE:
corA1 = float(input("Digite aqui a primeira coordenada do ponto A: "))

corA2 = float(input("Digite aqui a segunda coordenada do ponto A: "))

corB1 = float(input("Digite aqui a primeira coordenada do ponto B: "))

corB2 = float(input("Digite aqui a segunda coordenada do ponto B: "))

xm = (corB1 + corA1) / 2

ym = (corB2 + corA2) / 2

print(round(xm, 1))

print(round(ym, 1))
-- EXECUTION TIME:
0.190477
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
40.0
36.5
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
3.8
2.4
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
2.3
3.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
